html/css initial basics

--- a/enqueue.html
+++ b/enqueue.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="enqueue.css" />
   </head>
   <body>
-    <h1>Improved Video Waiting Area</h1>
-    <div class="dropdown-menu">
-      <button class="dropbutton">queue</button>
-      <div class="dropMenuContent">
-        <div id="queueList"></div>
-      </div>
+    <h1>Enqueue</h1>
+    <select id="sortDropDown">
+      <option value="shuffle">shuggle</option>
+      <option value="shuffle">shuggle</option>
+      <option value="shuffle">shuggle</option>
+    </select>
+    <div id="videoQueue">
+      <!-- video things that need to be integrated-->
     </div>
+
     <script src="enqueue.js"></script>
   </body>
 </html>
