--- a/enqueue.html
+++ b/enqueue.html
@@ -9,7 +9,15 @@
   <body>
     <h1>Improved Video Waiting Area</h1>
     <div class="dropdown-menu">
-      <button class="dropbutton">queue</button>
+      <button class="dropbutton">queue</button> <button class="shufflebutton">shuffle</button> 
+      <div class="sort-dropdown">
+      <button class="sort-btn">Sort By ▼</button>
+      <div class="sort-options">
+        <a href="#">Recently Added</a>
+        <a href="#">Recently Viewed</a>
+        <a href="#">Longest</a>
+      </div>
+    </div>
       <div class="dropMenuContent">
         <div id="queueList"></div>
       </div>
