--- a/enqueue.html
+++ b/enqueue.html
@@ -13,9 +13,9 @@
       <div class="sort-dropdown">
       <button class="sort-btn">Sort By ▼</button>
       <div class="sort-options">
-        <a href="#">Recently Added</a>
-        <a href="#">Recently Viewed</a>
-        <a href="#">Longest</a>
+        <a href="#">Channel Title</a>
+        <a href="#">Date</a>
+        <a href="#">Video Title</a>
       </div>
     </div>
       <div class="dropMenuContent">
