basics and youtube themes

--- a/enqueue.html
+++ b/enqueue.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="enqueue.css" />
   </head>
   <body>
-    <h1>Enqueue</h1>
-    <select id="sortDropDown">
-      <option value="shuffle">shuggle</option>
-      <option value="shuffle">shuggle</option>
-      <option value="shuffle">shuggle</option>
-    </select>
+    <header>
+      <h1>Enqueue</h1>
+      <select id="sortDropDown">
+        <option value="shuffle">Sort</option>
+        <option value="shuffle">shufflle</option>
+        <option value="length">length</option>
+        <option value="watched">watched</option>
+      </select>
+    </header>
     <div id="videoQueue">
       <!-- video things that need to be integrated-->
     </div>
