fixed merges. updated dropdown

--- a/enqueue.html
+++ b/enqueue.html
@@ -7,24 +7,29 @@
     <link rel="stylesheet" href="enqueue.css" />
   </head>
   <body>
+    <!-- Headers Content-->
     <header>
       <h1>Enqueue</h1>
-        <div class="dropdown-menu">
-           <button class="dropbutton">queue</button> <button class="shufflebutton">shuffle</button> 
-          <div class="sort-dropdown">
-          <button class="sort-btn">Sort By ▼</button>
-          <div class="sort-options">
-            <a href="#">Channel Title</a>
-            <a href="#">Date</a>
-            <a href="#">Video Title</a>
+        <div class="dropdown">
+           <!-- <button class="dropbtn">Queue</button> -->
+           <button class="dropbtn">Sort By ▼</button>
+           <div class="dropdown-content"> 
+                     <a href="#">Channel Title</a>
+                     <a href="#">Date</a>
+                     <a href="#">Video Title</a>
           </div>
         </div>
-      </header>
-          <div class="dropMenuContent">
+      </div>
+    </header>
+
+    <!-- Videos Content-->
+    <div class="video-container">
             <div id="videoQueue">
-              <!-- video things that need to be integrated--> </div>
+              <!-- video things that need to be integrated--> 
+              test test testing
+            </div>
           </div>
-    >>>>>>> 48ee87fb52723f74facb180f97c49424885b9f51
+   <!-- not sure what this: >>>>>>> 48ee87fb52723f74facb180f97c49424885b9f51 -->
         </div>
     
         <script src="enqueue.js"></script>
