CSS Updates, and Minor HTML and JS changes
CSS
- Added the fonts used in the mockups
- Increased the height and width of the extension by 25%
- Change the color of the background to a darker, muted red
- Changed the font size for the header title
- Changed the background color of the sort button to transparent
- Changed the font, margin, and padding of the sort button
- Commented out the position attribute of the dropdown
- Rounded the corners of the dropdown menu
- Hid the overflow of the dropdown to maintain rounded corners
- Center aligned the text of the dropdown menu

HTML
- Added a class to the header for specific handling
- Added an arrow image meant to control the ascending and descending property of the videos
- Put the sort by button and the arrow into a div container
- Added two more buttons to the header to serve as Shuffle and Settings buttons

JS
- Added an eventListener function to control the ascending and descending of the arrow (So far just controls the appearance on click)
- Added a global variable that states if the user wants the videos assorted by ascending or descending

Files
- Added the font files
- Added three SVG files that are for the Sort arrow, shuffle button, and settings button

--- a/enqueue.html
+++ b/enqueue.html
@@ -9,17 +9,24 @@
   <body>
     <!-- Headers Content-->
     <header>
-      <h1>Enqueue</h1>
+      <h1 class="header-title">Enqueue</h1>
         <div class="dropdown">
            <!-- <button class="dropbtn">Queue</button> -->
-           <button class="dropbtn">Sort By ▼</button>
+           <div class="dropbtn-container">
+             <button class="dropbtn">Sort By</button>
+             <img id="dropdown-order" src="./img/Order.svg" title="Decending">
+           </div>
+
            <div class="dropdown-content"> 
                      <a href="#">Channel Title</a>
                      <a href="#">Date</a>
                      <a href="#">Video Title</a>
           </div>
         </div>
-      </div>
+
+        <img class="header-button" src="./img/Shuffle.svg">
+        <img class="header-button" src="./img/Settings.svg">
+      <!-- </div> -->
     </header>
 
     <!-- Videos Content-->
