--- a/enqueue.html
+++ b/enqueue.html
@@ -15,7 +15,9 @@
            <!-- <button class="dropbtn">Queue</button> -->
           <div class="dropbtn-container">
             <button class="dropbtn">Sort By</button>
-            <img id="dropdown-order" src="./img/Order.svg" title="Decending">
+            <button class="image-button">
+              <img id="dropdown-order" src="./img/Order.svg" title="Decending">
+            </button>
           </div>
 
           <div class="dropdown-content"> 
@@ -25,18 +27,29 @@
           </div>
 
         </div>
+        <button class="image-button" id="shuffle-button">
+          <img class="header-button" src="./img/Shuffle.svg">
+        </button>
 
-        <img class="header-button" src="./img/Shuffle.svg">
-        <img class="header-button" src="./img/Settings.svg">
+        <button class="image-button" id="settings-button">
+          <img class="header-button" src="./img/Settings.svg">
+        </button>
       <!-- </div> -->
     </header>
 
     <!-- Videos Content-->
-    <div class="video-container">
-      <div id="videoQueue">
-              <!-- video things that need to be integrated--> 
-        test test testing
-      </div>
+    <div class="video-container"  id="videoQueue">
+        <!-- <div class="video-entry" id="entry0">
+          <h1 class="video-order-number" id="video-number-0">1</h1>
+          <img class="video-thumbnail" src="./img/thumbnail_0.jpg" id="video-image-0">
+          <div class="video-information-container" id="video-information-0">
+            <h1 class="video-title" id="video-name-0">Video Title</h1>
+            <p class="video-description" id="channel-name-0">Channel</p>
+          </div>
+          <button class="image-button video-drag-button" id="video-0-drag-button">
+            <img src="./img/Drag.svg" id="video-drag-button-image">
+          </button>
+        </div> -->
     </div>
    <!-- not sure what this: >>>>>>> 48ee87fb52723f74facb180f97c49424885b9f51 -->
   </body>
