--- a/enqueue.html
+++ b/enqueue.html
@@ -40,14 +40,22 @@
     <!-- Videos Content-->
     <div class="video-container"  id="videoQueue">
         <!-- <div class="video-entry" id="entry0">
-          <h1 class="video-order-number" id="video-number-0">1</h1>
+          <div class="video-left-side-container">
+            <button class="image-button delete-button" id="video-0-delete-button">
+              <img class="video-button-image" src="./img/Delete.svg" id="video-delete-button-image">
+            </button>
+            <h1 class="video-order-number" id="video-number-0">1</h1>
+          </div>
+
           <img class="video-thumbnail" src="./img/thumbnail_0.jpg" id="video-image-0">
+
           <div class="video-information-container" id="video-information-0">
             <h1 class="video-title" id="video-name-0">Video Title</h1>
             <p class="video-description" id="channel-name-0">Channel</p>
           </div>
+
           <button class="image-button video-drag-button" id="video-0-drag-button">
-            <img src="./img/Drag.svg" id="video-drag-button-image">
+            <img class="video-button-image" src="./img/Drag.svg" id="video-drag-button-image">
           </button>
         </div> -->
     </div>
