fixed some errors

--- a/enqueue.html
+++ b/enqueue.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="enqueue.css" />
   </head>
   <body>
+    <div id="notification-container"></div>
     <!-- HEADER!!!! -->
     <header>
       <h1 class="header-title">Enqueue</h1>
