--- a/enqueue.html
+++ b/enqueue.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="notification-container"></div>
-    <!-- HEADER!!!! -->
+    <!-- HEADER -->
     <header>
       <h1 class="header-title">Enqueue</h1>
       <!-- SORTING DROPDOWN -->
@@ -20,14 +20,15 @@
           </button>
         </div>
         <!-- DROPDOWN OPTIONS -->
-        <div class="dropdown-content">
+        <div class="dropdown-content" id="sort-options">
           <a class="dropdown-content-option">Channel Title</a>
           <a class="dropdown-content-option">Date</a>
           <a class="dropdown-content-option">Video Title</a>
+          <a class="dropdown-content-option">Chronological</a>
+          <a class="dropdown-content-option">Reverse Chronological</a>
         </div>
       </div>
-
-      <!-- SHUFFLE BUTTON  -->
+      <!-- SHUFFLE BUTTON -->
       <button class="image-button" id="shuffle-button">
         <img class="header-button" src="./img/Shuffle.svg" />
       </button>
@@ -38,41 +39,9 @@
     </header>
 
     <!-- VIDEOS CONTENT CONTAINER -->
-    <div class="video-container" id="videoQueue">
-      <!-- <div class="video-entry" id="entry0">
-        <div class="video-left-side-container">
-          <button class="image-button delete-button" id="video-0-delete-button">
-            <img
-              class="video-button-image"
-              src="./img/Delete.svg"
-              id="video-delete-button-image"
-            />
-          </button>
-          <h1 class="video-order-number" id="video-number-0">1</h1>
-        </div>
+    <div class="video-container" id="videoQueue"></div>
 
-        <img
-          class="video-thumbnail"
-          src="./img/thumbnail_0.jpg"
-          id="video-image-0"
-        />
-
-        <div class="video-information-container" id="video-information-0">
-          <h1 class="video-title" id="video-name-0">Video Title</h1>
-          <p class="video-description" id="channel-name-0">Channel</p>
-        </div>
-
-        <button class="image-button video-drag-button" id="video-0-drag-button">
-          <img
-            class="video-button-image"
-            src="./img/Drag.svg"
-            id="video-drag-button-image"
-          />
-        </button>
-      </div>-->
-    </div>
-
-    <!-- NEW VIDEO INPUT  -->
+    <!-- NEW VIDEO INPUT -->
     <div class="video-input-container">
       <h1 id="video-input-instruction">
         Enter a <b>YouTube</b> URL to queue a video.
@@ -83,7 +52,6 @@
           id="video-input-box"
           placeholder="www.youtube.com/watch?v= . . . "
         />
-
         <button id="video-input-submit-button">Add</button>
       </div>
     </div>
@@ -92,3 +60,38 @@
     <script src="enqueue.js"></script>
   </body>
 </html>
+
+<!-- VIDEOS CONTENT CONTAINER -->
+<!-- <div class="video-container" id="videoQueue">
+     <div class="video-entry" id="entry0">
+      <div class="video-left-side-container">
+        <button class="image-button delete-button" id="video-0-delete-button">
+          <img
+            class="video-button-image"
+            src="./img/Delete.svg"
+            id="video-delete-button-image"
+          />
+        </button>
+        <h1 class="video-order-number" id="video-number-0">1</h1>
+      </div>
+
+      <img
+        class="video-thumbnail"
+        src="./img/thumbnail_0.jpg"
+        id="video-image-0"
+      />
+
+      <div class="video-information-container" id="video-information-0">
+        <h1 class="video-title" id="video-name-0">Video Title</h1>
+        <p class="video-description" id="channel-name-0">Channel</p>
+      </div>
+
+      <button class="image-button video-drag-button" id="video-0-drag-button">
+        <img
+          class="video-button-image"
+          src="./img/Drag.svg"
+          id="video-drag-button-image"
+        />
+      </button>
+    </div>
+  </div> -->
