Fixed the missing delete button and hid the settings button

--- a/enqueue.html
+++ b/enqueue.html
@@ -33,7 +33,7 @@
         <img class="header-button" src="./img/Shuffle.svg" />
       </button>
       <!-- SETTINGS BUTTON -->
-      <button class="image-button" id="settings-button">
+      <button class="image-button hide" id="settings-button">
         <img class="header-button" src="./img/Settings.svg" />
       </button>
     </header>
